@@ -83,8 +83,8 @@
           "time",
           "storm",
           "scale1",
-          "",
-          ""
+          "open_forest",
+          "open_door"
         ]
       ]
     },
