@@ -1,5 +1,6 @@
 1.0.0.4:
-  -add small key counters
+  -added small key counters
+  -started adding open/closed forest/door logic
 1.0.0.3:
   -fixed Zoras Domain/Fountain logic interaction between child and adult
   -fixed Zoras Fountain Fairy can't be opened with hammer
